--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     },
                     
                     screens: {
-                        xs: '340px',
+                        xss: '340px',
+                        xs: '500px',
                         sm: '640px',
                         md: '768px',
                         lg: '1024px',
@@ -121,7 +122,7 @@
 
         <section class="flex justify-center items-center w-full relative">
             <div class="w-96 text-center relative text-white pt-20 pb-40 2xl:pb-60 px-3">
-                <h1 class="font-lato text-5xl xs:text-6xl pb-10 font-medium">Reach The World</h1>
+                <h1 class="font-lato text-5xl xss:text-6xl pb-10 font-medium">Reach The World</h1>
 
                 <p class="text-lg font-medium leading-10 bg-white/10 rounded-md mt-3 p-3">
                     Whether you need a website to stay in touch with your audience, or an app to improve your workflow, we offer effective and
@@ -141,9 +142,9 @@
 
         <section class="bg-white w-full text-center py-24 text-stone-700 relative">
             <h2 class="text-4xl pb-20 text-center px-10">Mobile First Design</h2>
-            <section class="md:flex justify-center items-center md:gap-20">
-                <video src="/Assets/scrolling.mp4" class="h-96 hidden md:block md:pl-4" autoplay loop muted> </video>
-                <p class="pb-5 px-8 text-xl max-w-lg leading-8 md:leading-10 md:text-left md:pl-8 ">
+            <section class="md:flex justify-center items-center md:gap-10 lg:gap-20 md:pl-4">
+                <video src="/Assets/scrolling.mp4" class="h-96 hidden md:block  shadow-lg rounded-md" autoplay loop muted> </video>
+                <p class="pb-5 px-8 text-xl max-w-lg leading-8 md:leading-10 md:text-left md:pl-8 xs:max-w-full xs:px-14 md:max-w-lg md:px-8">
                 Your customers search, browse and communicate on their mobile devices. We make sure visitors coming to your site have the same premium experience on every device, without compromising on speed, quality or appearance.</p>
             </section>
         </section>
@@ -162,12 +163,12 @@
             <h2 id="websites" class="pb-5 text-3xl mb-7 text-center text-chinablack">Websites</h2>
             <section class ="imagecontainer text-center md:flex justify-center flex-wrap gap-20 md:px-20 lg:px-0  mb-10">
                 <section class="">
-                <img class="mx-auto" src="http://placekitten.com/200/300">
+                <img class="mx-auto w-[200px] h-[300px]" src="/Assets/Vatraxakia.png">
                 <a class= "button inline-block bg-chinablack text-white font- semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4" href="#"> VIEW DEMO </a>
                 </section>
                 <section>
-                    <img class="mx-auto" src="http://placekitten.com/200/300">
-                    <a href="#" class= "button inline-block bg-chinablack text-white font- semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4"> VIEW DEMO </a>
+                    <img class="mx-auto w-[200px] h-[300px]" src="/Assets/www.DmoralsGaming.png">
+                    <a href="https://www.dmorals.com" target="_blank" class= "button inline-block bg-chinablack text-white font- semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4"> VIEW DEMO </a>
                 </section>
                 <section>
                     <img class="mx-auto" src="http://placekitten.com/200/300">
@@ -182,7 +183,7 @@
             <!-- PRO BONO SAMPLES -->
 
             <section class="probonocontainer text-center bg-stone-50 md:px-30 md:py-10">
-                <h3 class="pb-5 text-3xl mb-7 text-center text-chinablack pt-10">ProBono Work</h3>
+                <h3 class="pb-5 text-3xl mb-7 text-center text-chinablack pt-10">Pro Bono Work</h3>
                 <section class="md:flex justify-center gap-20 ">
                     <section>
                         <img class="mx-auto" src="http://placekitten.com/200/300">
@@ -203,20 +204,20 @@
         <section class="bg-white relative text-center pt-10 pb-20">
             <h2 id="apps" class="text-3xl pb-10 text-center px-10 text-stone-700">APPS</h2>
             <section class=" relative text-center md:px-20 md:text-left xl:flex justify-center xl:gap-20 mx-auto">
-                <section class="md:flex justify-between gap-20 pb-10 max-w-xl">
-                    <img class="mx-auto " width="200" height="300"  src="http://placekitten.com/200/300">
-                    <section class="sideonmid flex-1">
+                <section class="md:flex md:justify-between md:gap-20 pb-10 max-w-xl mx-auto xl:mx-0 ">
+                    <img class="mx-auto w-[200px] h-[300px]"  src="http://placekitten.com/200/300">
+                    <section class="sideonmid flex-1 md:flex md:flex-col md:justify-between">
                         <p class="py-5 px-8 md:px-0 text-lg  text-stone-700 leading-8 ">A custom made application enabling university students to connect with mentors. Students input their information and get matched with an appropriate mentor within academia.</p>
-                        <a href="#" class= "button inline-block bg-chinablack text-white font- semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4">
+                        <a href="#" class= "button inline-block bg-chinablack text-white font-semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4 w-fit">
                         VIEW DEMO </a>
                     </section>
                 </section>
 
-                <section class="md:flex justify-between gap-20 pb-10 max-w-xl">
-                    <img class="mx-auto "  src="http://placekitten.com/200/300">
-                    <section class="sideonmid flex-1">
+                <section class="md:flex md:justify-between md:gap-20 pb-10 max-w-xl mx-auto xl:mx-0">
+                    <img class="mx-auto w-[200px] h-[300px]" src="http://placekitten.com/200/300">
+                    <section class="sideonmid flex-1 md:flex md:flex-col md:justify-between">
                         <p class="py-5 px-8 md:px-0 text-lg  text-stone-700">A proprietary application for a mid-size film production company. It searches multiple repositories for sound-effect files, allowing the users to access them all in one place, saving precious time</p>
-                        <a href="#" class= "button inline-block bg-chinablack text-white font- semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4"> VIEW DEMO </a>
+                        <a href="#" class= "button inline-block bg-chinablack text-white font-semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4 w-fit"> VIEW DEMO </a>
                     </section>
                 </section>
             </section>
