Shadows on pic links

--- a/index.html
+++ b/index.html
@@ -163,19 +163,19 @@
             <h2 id="websites" class="pb-5 text-3xl mb-7 text-center text-chinablack">Websites</h2>
             <section class ="imagecontainer text-center md:flex justify-center flex-wrap gap-20 md:px-20 lg:px-0  mb-10">
                 <section class="">
-                <a href="https://vatraxakia.thalia.tech" target="_blank"><img class="mx-auto w-[200px] h-[300px]" src="/Assets/Vatraxakia.png"a href="https://vatraxakia.thalia.tech"></a>
+                <a href="https://vatraxakia.thalia.tech" target="_blank"><img class="mx-auto w-[200px] h-[300px] shadow-lg rounded-md transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300" src="/Assets/Vatraxakia.png"a href="https://vatraxakia.thalia.tech"></a>
                 <a class= "button inline-block bg-chinablack text-white font- semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4" href="https://vatraxakia.thalia.tech"> VIEW DEMO </a>
                 </section>
                 <section>
-                    <a href="https://www.dmorals.com" target="_blank"><img class="mx-auto w-[200px] h-[300px]" src="/Assets/2DmoralsGaming.png"></a>
+                    <a href="https://www.dmorals.com" target="_blank"><img class="mx-auto w-[200px] h-[300px] shadow-lg rounded-md transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300" src="/Assets/2DmoralsGaming.png"></a>
                     <a href="https://www.dmorals.com" target="_blank" class= "button inline-block bg-chinablack text-white font- semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4"> VIEW DEMO </a>
                 </section>
                 <section>
-                    <a href="https://www.dmorals.com" target="_blank"><img class="mx-auto" src="http://placekitten.com/200/300"></a>
+                    <a href="https://www.dmorals.com" target="_blank"><img class="mx-auto  w-[200px] h-[300px] shadow-lg rounded-md transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300" src="http://placekitten.com/200/300"></a>
                     <a href="#" class= "button inline-block bg-chinablack text-white font- semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4"> VIEW DEMO </a>
                 </section>
                 <section>
-                    <img class="mx-auto" src="http://placekitten.com/200/300">
+                    <a href="https://www.dmorals.com" target="_blank"><img class="mx-auto  w-[200px] h-[300px] shadow-lg rounded-md transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300" src="http://placekitten.com/200/300"></a>
                     <a href="#" class= "button inline-block bg-chinablack text-white font- semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4"> VIEW DEMO </a>
                 </section>
             </section>
@@ -186,12 +186,12 @@
                 <h3 class="pb-5 text-3xl mb-7 text-center text-chinablack pt-10">Pro Bono Work</h3>
                 <section class="md:flex justify-center gap-20 ">
                     <section>
-                        <img class="mx-auto" src="http://placekitten.com/200/300">
+                        <a href="https://www.dmorals.com" target="_blank"><img class="mx-auto w-[200px] h-[300px] shadow-lg rounded-md transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300" src="http://placekitten.com/200/300"></a>
                         <a href="#" class= "button inline-block bg-chinablack text-white font- semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4"> VIEW DEMO </a>
                     </section>
 
                     <section>
-                        <img class="mx-auto" src="http://placekitten.com/200/300">
+                        <a href="https://www.dmorals.com" target="_blank"><img class="mx-auto w-[200px] h-[300px] shadow-lg rounded-md transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300" src="http://placekitten.com/200/300"></a>
                         <a href="#" class= "button inline-block bg-chinablack text-white font- semibold rounded py-3 px-3 mt-2 mb-7 hover:bg-chinarose transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300 md:mt-4"> VIEW DEMO </a>
                     </section>
 
