--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                             chinaredplum:'#360a11',
                             probono:'#d8b4ba',
                             chinatrans: '#7c282631', 
+                            backgroundImage:{
+                                'mobile-back': "url('/Assets/mobile-background1.png')",
+                            }
                         },
                     },
                     
@@ -140,7 +143,7 @@
 
         <!-- MOBILE FIRST -->
 
-        <section class="bg-white w-full text-center py-24 text-stone-700 relative">
+        <section class="bg-white bg-[url('/Assets/mobileback2.png')] w-full text-center py-24 text-stone-700 relative bg-cover bg-no-repeat">
             <h2 class="text-4xl pb-20 text-center px-10">Mobile First Design</h2>
             <section class="md:flex justify-center items-center md:gap-10 lg:gap-20 md:pl-4">
                 <video src="/Assets/scrolling.mp4" class="h-96 hidden md:block  shadow-lg rounded-md" autoplay loop muted> </video>
