--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
             <h3 class="mb-7 pb-5 pt-10 text-center text-3xl text-chinablack">Pro Bono Work</h3>
             <section class="justify-center gap-20 md:flex">
                 <section>
-                    <a href="https://www.dmorals.com" target="_blank"><img
+                    <a href="https://communitykinder.thalia.tech/" target="_blank"><img
                             class="mx-auto h-[300px] w-[200px] rounded-md shadow-lg transition duration-300 ease-in-out hover:-translate-y-1 hover:scale-110"
-                            src="http://placekitten.com/200/300" /></a>
-                    <a href="#"
+                            src="/Assets/koinotiko.png" /></a>
+                    <a href="https://communitykinder.thalia.tech/"
                         class="button font- semibold mt-2 mb-7 inline-block rounded bg-chinablack py-3 px-3 text-white transition duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-chinarose md:mt-4">
                         VIEW DEMO
                     </a>
