--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
-    <meta name="description" content="Your description goes here" />
-    <meta name="keywords" content="full stack developer, web design, web development" />
+    <meta name="description" content="Full Stack Developer MERN" />
+    <meta name="keywords" content="full stack developer, web design, web development mern" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thalia Tech</title>
 
