keywords and alt-tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
     <meta name="description" content="Full Stack Developer MERN" />
-    <meta name="keywords" content="full stack developer, web design, web development mern" />
+    <meta name="keywords" content="full stack developer, web design, web development mern, web app, web developer, developer for hire" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thalia Tech</title>
 
@@ -160,7 +160,7 @@
                 <section>
                     <a href="https://communitykinder.thalia.tech/" target="_blank"><img
                             class="mx-auto h-[300px] w-[200px] rounded-md shadow-lg transition duration-300 ease-in-out hover:-translate-y-1 hover:scale-110"
-                            src="/Assets/koinotiko.png" /></a>
+                            src="/Assets/koinotiko.png" alt = "pro bono community kindergarden" /></a>
                     <a href="https://communitykinder.thalia.tech/"
                         class="button font- semibold mt-2 mb-7 inline-block rounded bg-chinablack py-3 px-3 text-white transition duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-chinarose md:mt-4">
                         VIEW DEMO
