Link Text for Logo for Screen Readers

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		c1.2,1.9,1.8,4.2,1.8,6.7C-101.2,63.5-110.6,72.3-122.1,72.3L-122.1,72.3z" />
                     </g>
                 </svg>
+                <span class = "sr-only">Logo</span>
             </a>
             <ul class="flex items-center text-lg font-medium text-white">
                 <li>
