Updated contact form action and sizing

--- a/index.html
+++ b/index.html
@@ -219,27 +219,27 @@
 
     <!-- CONTACT FORM -->
 
-    <section id="contact" class="relative">
+    <section id="contact" class="relative pt-10">
         <h3 class="py-10 px-10 text-center text-3xl text-white">CONTACT</h3>
-        <div class="mx-auto w-full md:w-96 md:max-w-full">
+        <div class="mx-auto w-full md:w-96 md:max-w-full pb-20 ">
             <div class="border border-gray-300 p-6 sm:rounded-md">
-                <form method="POST" action="https://thalia.tech">
+                <form method="POST" action="https://formspree.io/f/xqkndzyg">
                     <label class="mb-6 block">
                         <span class="text-white">Your name</span>
                         <input type="text" name="name"
-                            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
+                            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 p-2"
                             placeholder="Name" />
                     </label>
                     <label class="mb-6 block">
                         <span class="text-white">Email address</span>
                         <input name="email" type="email"
-                            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
+                            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 p-2"
                             placeholder="youremail@example.com" required />
                     </label>
                     <label class="mb-6 block">
                         <span class="text-white">Message</span>
                         <textarea name="message"
-                            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
+                            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 p-2"
                             rows="3" placeholder="How can we help you?"></textarea>
                     </label>
                     <div class="mb-6">
