Added Larger font for hero  <p> for larger screens

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&display=swap"
         rel="stylesheet" />
 
-    <link rel="stylesheet" href="./css/output.css?v=2" />
+    <link rel="stylesheet" href="./css/output.css?v=2.1" />
 </head>
 
 <body class="font-lato">
@@ -73,7 +73,7 @@
         <div class="relative w-96 px-3 pt-20 pb-40 text-center text-white 2xl:pb-60">
             <h1 class="pb-10 font-lato text-5xl font-medium xss:text-6xl">Reach The World</h1>
 
-            <p class="mt-3 rounded-md bg-white/10 p-3 text-lg font-medium leading-10">
+            <p class="mt-3 rounded-md bg-white/10 p-3 text-lg xl:text-xl xl:leading-10  font-medium leading-10">
                 Whether you need a website to stay in touch with your audience, or an app to improve your workflow, we
                 offer effective and creative solutions
             </p>
@@ -204,7 +204,7 @@
                 <img class="mx-auto h-[300px] w-[200px]" src="http://placekitten.com/200/300" />
                 <section class="sideonmid flex-1 md:flex md:flex-col md:justify-between">
                     <p class="py-5 px-8 text-lg text-stone-700 md:px-0">
-                        A proprietary application for a mid-size film production company. It searches multiple
+                        A proprietary application for a mid-size film production company. It searches multiple online
                         repositories for sound-effect files, allowing the users to access them all in one place, saving
                         precious time
                     </p>
