Added qmul app mockup

--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
         <h2 id="apps" class="px-10 pb-10 text-center text-3xl text-stone-700">APPS</h2>
         <section class="relative mx-auto justify-center text-center md:px-20 md:text-left xl:flex xl:gap-20">
             <section class="mx-auto max-w-xl pb-10 md:flex md:justify-between md:gap-20 xl:mx-0">
-                <img class="mx-auto h-[300px] w-[200px]" src="http://placekitten.com/200/300" />
+                <a href="/Assets/QMULAPP.png" target="_blank"><img class="mx-auto h-[300px] w-[200px]" src="/Assets/QMULAPP.png" alt = "Mentoring app for University"/></a>
                 <section class="sideonmid flex-1 md:flex md:flex-col md:justify-between">
                     <p class="py-5 px-8 text-lg leading-8 text-stone-700 md:px-0">
                         A custom made application enabling university students to connect with mentors. Students input
                         their information and get matched with an appropriate mentor within academia.
                     </p>
-                    <a href="#"
+                    <a href="/Assets/QMULAPP.png" target="_blank">
                         class="button mt-2 mb-7 inline-block w-fit rounded bg-chinablack py-3 px-3 font-semibold text-white transition duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-chinarose md:mt-4">
                         VIEW DEMO
                     </a>
