--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         A custom made application enabling university students to connect with mentors. Students input
                         their information and get matched with an appropriate mentor within academia.
                     </p>
-                    <a href="/Assets/QMULAPP.png" target="_blank">
+                    <a href="/Assets/QMULAPP.png" target="_blank"
                         class="button mt-2 mb-7 inline-block w-fit rounded bg-chinablack py-3 px-3 font-semibold text-white transition duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-chinarose md:mt-4">
                         VIEW DEMO
                     </a>
