--- a/index.html
+++ b/index.html
@@ -201,14 +201,14 @@
             </section>
 
             <section class="mx-auto max-w-xl pb-10 md:flex md:justify-between md:gap-20 xl:mx-0">
-                <img class="mx-auto h-[300px] w-[200px]" src="http://placekitten.com/200/300" />
+                <a href = "/Assets/soundfx.png" target="_blank"> <img class="mx-auto h-[300px] w-[200px]" src="/Assets/soundfx.png" alt = "Sound Effects Library Search"/></a>
                 <section class="sideonmid flex-1 md:flex md:flex-col md:justify-between">
                     <p class="py-5 px-8 text-lg text-stone-700 md:px-0">
                         A proprietary application for a mid-size film production company. It searches multiple online
                         repositories for sound-effect files, allowing the users to access them all in one place, saving
                         precious time
                     </p>
-                    <a href="#"
+                    <a href="/Assets/soundfx.png"
                         class="button mt-2 mb-7 inline-block w-fit rounded bg-chinablack py-3 px-3 font-semibold text-white transition duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-chinarose md:mt-4">
                         VIEW DEMO
                     </a>
